i have successfully added two input fields to be used on swagger api
